# StockDataAnalysis

./: 2020Q1Q2Q3Q4-2021Q1.xlsx  EDA.ipynb  README.md  pyproject.toml
