[tool.poetry]
name = "project5valueinvestor"
version = "0.1.0"
description = ""
authors = ["Rubén Chuliá Mena <rubchume@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.1"
pandas = "^2.0.2"
openpyxl = "^3.1.2"
gspread = "^5.9.0"
plotly = "^5.14.1"
statsmodels = "^0.14.0"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
ipywidgets = "^8.0.6"
jupyterlab-widgets = "^3.0.7"
jupyter-contrib-nbextensions = "^0.7.0"
pmdarima = "^2.0.3"
backtrader = "^1.9.78.123"
ipympl = "^0.9.3"
quantstats = "^0.0.61"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
